--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "homepage": "https://CordascoLucas.github.io",
   "dependencies": {
     "-": "^0.0.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/material": "^5.12.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
